--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 </ul> 
             </nav>
             <div id="boton-cv">
-                <button onclick="location.href='Archivos/CurriculumVitae-LuciaSchiro.pdf'" download>Currículum</button>
+                <button onclick="location.href='Archivos/CurriculumVitae-LuciaSchiro'" download>Currículum</button>
             </div>
         </div>
     </header>
@@ -91,7 +91,7 @@
                 <div class="fila-intermedia">
                     <div class="tarjeta">
                         <div class="icono">
-                            <img src="./Imagenes/data-storage-2-56 (1).png" alt="Imagen">
+                            <img src="./Imagenes/icon-camión.png" alt="Imagen">
                         </div>
                         <div class="contenido">
                             <h2>Sistema Gestión de Logística</h2>
