--- a/index.html
+++ b/index.html
@@ -24,7 +24,9 @@
                 </ul> 
             </nav>
             <div id="boton-cv">
-                <button onclick="location.href='Archivos/CurriculumVitae-LuciaSchiro'" download>Currículum</button>
+                <a href="Archivos/CurriculumVitae_LuciaSchiro.pdf" target="_blank">
+                    <button>Currículum</button>
+                </a>
             </div>
         </div>
     </header>
