--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
                 </ul> 
             </nav>
             <div id="boton-cv">
-                <a href="Archivos/CurriculumVitae_LuciaSchiro.pdf" target="_blank">
-                    <button>Currículum</button>
+                <a href="./Archivos/CV_LuciaSchiro.pdf">
+                    <button>Curriculum</button>
                 </a>
             </div>
         </div>
