--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 </ul> 
             </nav>
             <div id="boton-cv">
-                <a href="./Archivos/CV_LuciaSchiro.pdf">
+                <a href="./Archivos/CV_Lucia Schiro.pdf">
                     <button>Curriculum</button>
                 </a>
             </div>
