--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 </ul> 
             </nav>
             <div id="boton-cv">
-                <a href="./Archivos/CV_Lucia Schiro.pdf">
+                <a href="./Archivos/Curriculum_LuciaSchiro.pdf">
                     <button>Curriculum</button>
                 </a>
             </div>
@@ -38,8 +38,8 @@
                 <h2>Desarrolladora Backend</h2>
                 <p>
                 Estudiante de programación en la UTN, apasionada por la tecnología y el desarrollo de software.
-                Actualmente curso el segundo año, donde estoy aprendiendo C# y profundizando mis conocimientos en base de datos, 
-                tanto relacionales como no relacionales. Aprendí a programar con C++, lo que me permitió desarrollar una base sólida en lógica y pensamiento algorítmico. 
+                Actualmente estoy cursando las últimas materias, donde estoy aprendiendo JAVA y profundizando mis conocimientos en base de datos relacionales. 
+                Aprendí a programar con C++, lo que me permitió desarrollar una base sólida en lógica y pensamiento algorítmico. 
                 Me defino como una persona proactiva, decidida y responsable. Disfruto resolver problemas, trabajar en equipo, proponer ideas y asumir nuevos desafios que me impulsen a 
                 seguir aprendiendo y creciendo día a día.
                 </p>
@@ -66,14 +66,14 @@
                 <div class="txt-sobre-mi">
                 <p>
                     Me considero una persona comprometida, con iniciativa, y con muchas ganas de aportar en entornos donde se valore la colaboración y el aprendizaje constante. Desde que comencé a aprender sobre desarrollo por videos de youtube, descubrí mi interés por la programación, y desde entonces busque constantemente mejorar mis habilidades y explorar nuevas tecnologías. 
-                    Actualmente, me encuentro aprendiendo C# y profundizando mis conocimientos en bases de datos.
+                    Actualmente, me encuentro aprendiendo JAVA y profundizando mis conocimientos en bases de datos.
                     Me gusta trabajar en proyectos que me desafíen y me permitan seguir creciendo. Disfruto colaborar en equipo, encontrar soluciones a problemas complejos y siempre estoy en busca de nuevas oportunidades para aprender. 
                     En el futuro, me gustaría seguir desarrollándome en el ámbito del backend y explorar más sobre la inteligencia artificial y el desarrollo de aplicaciones.
                 </p>
                 </div>
                 <div class="txt sobre mi">
                     <h3>Conocimientos técnicos:</h3>
-                    <li>Desarrollo en C# y C++</li>
+                    <li>Desarrollo en C# .NET y C++</li>
                     <li>Diseño y gestión de base de datos</li>
                     <li>Logica de programación y algoritmos</li>
                 </div>
@@ -150,22 +150,21 @@
                 </div>
           
                 <div class="exp-detalles">
-                    <p>Me encargué del seguimiento del desarrollo de una aplicación, coordinando al equipo de desarrollo para asegurar el cumplimiento de plazos y objetivos. Colaboré con marketing en la parte visual y brindé capacitación a los empleados para facilitar la adopción del sistema. Utilicé herramientas de gestión para organizar tareas, reportar avances y mantener una comunicación fluida entre las áreas.</p>
+                    <p>Change management - Analista de Organización y Procesos</p>
                 </div> 
                 <div class="aptitudes-exp">
                     <h4>Aptitudes del puesto:</h4>
                     <div class="columnas-flex">
                         <ul>
-                            <li>Gestión de plazos de entrega.</li>
-                            <li>Seguimiento de avances.</li>
-                            <li>Trabajo en equipo.</li>
-                            <li>Resolución de conflictos.</li>
+                            <li>Lideré la gestión y coordinación del proyecto de desarrollo de la nueva App financiera, trabajando junto al equipo de desarrollo, diferentes áreas de la empresa, partes interesadas y usuarios finales.</li>
+                            <br><li>Participé activamente en el testeo y validación funcional de la aplicación, asegurando la calidad y cumplimiento de los requerimientos.</li>
+                            <br><li>Uso de SQL Server y Excel para reportes de gestion.</li>
                         </ul>
                         <ul>
-                            <li>Testing funcional.</li>
-                            <li>Adaptabilidad a cambios.</li>
-                            <li>Capacitación y formación de usuarios.</li>
-                            <li>Uso de herramientas de gestión.</li>
+                            <li>Coordinación con el equipo de desarrollo para la implementación de mejoras y resolución de incidentes.</li>
+                            <br><li>Participación en reuniones estrategicas.</li>
+                            <br><li>Brindé capacitaciones internas a usuarios durante el proceso de adopción de la nueva App.</li>
+                            <br><li>Soporte de mesa de ayuda y resolucion de incidentes del sistema.</li>
                         </ul>
                     </div>
                 </div>
